// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckoutButton /> should render disabled button 1`] = `
<Fragment>
  <Portal
    name="cart.checkout-button.before"
    props={
      Object {
        "isActive": false,
      }
    }
  />
  <Portal
    name="cart.checkout-button"
    props={
      Object {
        "isActive": false,
      }
    }
  >
    <Connect(Link)
      disabled={true}
      href="/checkout"
    >
      <RippleButton
        className="css-ce5yef"
        disabled={true}
        flat={false}
        onClick={null}
        rippleClassName=""
        rippleSize={null}
        testId="Button"
        type="regular"
        wrapContent={true}
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="cart.checkout"
        />
      </RippleButton>
    </Connect(Link)>
  </Portal>
  <Portal
    name="cart.checkout-button.after"
    props={
      Object {
        "isActive": false,
      }
    }
  />
</Fragment>
`;

exports[`<CheckoutButton /> should render enabled button 1`] = `
<Fragment>
  <Portal
    name="cart.checkout-button.before"
    props={
      Object {
        "isActive": true,
      }
    }
  />
  <Portal
    name="cart.checkout-button"
    props={
      Object {
        "isActive": true,
      }
    }
  >
    <Connect(Link)
      disabled={false}
      href="/checkout"
    >
      <RippleButton
        className="css-1mlc9hd"
        disabled={false}
        flat={false}
        onClick={null}
        rippleClassName=""
        rippleSize={null}
        testId="Button"
        type="regular"
        wrapContent={true}
      >
        <Translate
          className=""
          params={Object {}}
          role={null}
          string="cart.checkout"
        />
      </RippleButton>
    </Connect(Link)>
  </Portal>
  <Portal
    name="cart.checkout-button.after"
    props={
      Object {
        "isActive": true,
      }
    }
  />
</Fragment>
`;
